--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAME HERE"
+title: "Hyaluronic Acid Forecasting"
+author: "Mary Grace Stachnik"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
